--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
     --branco-principal: #FFFFFF;
     --cinza-secundario: #C0C0C0;
-    --botao-azul: #167BF7;
+    --botao-azul: #000000;
     --cor-de-fundo: #00030C;
     --fonte-principal: 'Inter';
     --botao-azul-efeito: #3c92fa;
@@ -116,7 +116,9 @@ body {
     font-size: 48px;
     color: var(--branco-principal);
 }
-
+Frame 1 (1).png
+Add files via upload
+4 minutes ago
 .lista__item {
     font-size: 32px;
     color: var(--branco-principal);
@@ -125,7 +127,9 @@ body {
 .rodape {
     text-align: center;
     margin: 5em 3em;
-}
+}Frame 1 (1).png
+Add files via upload
+4 minutes ago
 
 .rodape__lista {
     display: flex;
