--- a/styles.css
+++ b/styles.css
@@ -116,9 +116,7 @@ body {
     font-size: 48px;
     color: var(--branco-principal);
 }
-Frame 1 (2).png
-Add files via upload
-4 minutes ago
+
 .lista__item {
     font-size: 32px;
     color: var(--branco-principal);
@@ -127,9 +125,8 @@ Add files via upload
 .rodape {
     text-align: center;
     margin: 5em 3em;
-}Frame 1 (2).png
-Add files via upload
-4 minutes ago
+}
+
 
 .rodape__lista {
     display: flex;
