--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@ body {
 }
 
 .principal {
-    background-image: url("Frame 1 (2).png");
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
@@ -158,4 +157,10 @@ body {
 .container__botao:hover {
     background-color: var(--botao-azul-efeito);
     color: var(--cor-de-fundo);
+}
+
+.image {
+    width: 899px;
+    height: 608px;
+    flex-shrink: 0;
 }
