--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,8 @@ body {
     background-size: contain;
     align-items: center;
     text-align: center;
+    justify-content: center;
+    display: flex;
 }
 
 .container {
