--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 }
 
 .principal {
-    background-image: url(Shein.png)
+    background-image: url(Shein.png);
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
